Using Products instead of catalog in the main navigation and some style changes

--- a/studio_ghibli_store/app/views/static_pages/catalog.html.erb
+++ b/studio_ghibli_store/app/views/static_pages/catalog.html.erb
@@ -2,5 +2,5 @@
 
 <div class="mainCont">
     <h1>Shop</h1>
-    <p>We will show all our prodcuts on this page.</p>
+    <p>We will show all our products on this page.</p>
 </div>
