--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -19,9 +19,9 @@ body{
 }
 
 .headSec {
-    background: url("/assets/Site/golfcourse.jpg");
-    background-repeat: no-repeat;
-    background-size:100% 100%;
+    background: url("/assets/Site/Studio-Ghibli-Header.jpg");
+    background-repeat: repeat;
+    background-size:30% 100%;
     min-height:10px;
     background-color: #b3e0ff;
     width: 100%;
@@ -65,7 +65,6 @@ body{
      min-height: 80px;
      background-color: #b3e0ff;
      width: 100%;
-     margin-top: 10px;
      overflow: auto;
 }
 .container {
@@ -75,4 +74,6 @@ body{
     background-position:left bottom, right bottom;
     width: 100%;
     min-height: 700px;
+    margin:0;
+    padding:0;
 }
