--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <h1>Studio Ghibli European Store</h1>
       <ul>
         <li><%=link_to "Home", home_path %></li>
-        <li><%=link_to "Shop", shop_path %></li>
+        <li><%=link_to "Products", product_path %></li>
         <li><%=link_to "About", about_path %></li>
         <li><%=link_to "Help", help_path %></li>
         <li><%=link_to "Contact", contact_path %></li>
@@ -22,8 +22,6 @@
         <li><%=link_to "Cart", cart_path %></li>
       </ul>
     </header>
-    
-    
     <div class="container">
       <%= yield %>
     </div>
