--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<div class="mainCont">
+
+  <p id="notice"><%= notice %></p>
+  
+  <p>
+    <strong>Title:</strong>
+    <%= @product.title %>
+  </p>
+  
+  <p>
+    <strong>Description:</strong>
+    <%= @product.description %>
+  </p>
+  
+  <p>
+    <strong>Colour:</strong>
+    <%= @product.colour %>
+  </p>
+  
+  <p>
+    <strong>Price:</strong>
+    <%= @product.cost_price %>
+  </p>
+  
+  <p>
+    <strong>Image url:</strong>
+    <%= @product.image_url %>
+  </p>
+  
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+  <%= link_to 'Back', products_path %>
+
+</div>
+
