--- a/studio_ghibli_store/app/views/products/_form.html.erb
+++ b/studio_ghibli_store/app/views/products/_form.html.erb
@@ -1,42 +1,54 @@
-<%= form_for(product) do |f| %>
-  <% if product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-      <ul>
-      <% product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <%= form_for(product) do |f| %>
+    <% if product.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
+  
+        <ul>
+        <% product.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+  
+    <div class="field">
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :description %>
+      <%= f.text_area :description %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :colour %>
+      <%= f.text_area :colour %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :cost_price %>
+      <%= f.text_field :cost_price %>
+    </div>
+  
+    <div class="field">
+      <%= f.label :image_url %>
+      <%= f.text_field :image_url %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :catalog_categories_id %>
+      <%= f.text_field :catalog_categories_id %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :supplier_id %>
+      <%= f.text_field :supplier_id %>
+    </div>
+  
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :colour %>
-    <%= f.text_area :colour %>
-  </div>
-
-  <div class="field">
-    <%= f.label :cost_price %>
-    <%= f.text_field :cost_price %>
-  </div>
-
-  <div class="field">
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
