--- a/studio_ghibli_store/app/views/products/edit.html.erb
+++ b/studio_ghibli_store/app/views/products/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Product</h1>
+<div class="mainCont"> 
 
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+    <h1>Editing Product</h1>
+    
+    <%= render 'form', product: @product %>
+    
+    <%= link_to 'Show', @product %> |
+    <%= link_to 'Back', products_path %>
+    
+</div>
