--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -10,7 +10,8 @@
       <th>Colour</th>
       <th>Price</th>
       <th>Image url</th>
-      <th>Category</th>
+      <th>CategoryID</th>
+      <th>SupplierID</th>
 
       <th colspan="3"></th>
     </tr>
@@ -24,6 +25,8 @@
         <td><%= product.colour %></td>
         <td><%= product.cost_price %></td>
         <td><%= product.image_url %></td>
+        <td><%= product.catalog_categories_id %></td>
+        <td><%= product.supplier_id %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
