--- a/studio_ghibli_store/app/views/products/new.html.erb
+++ b/studio_ghibli_store/app/views/products/new.html.erb
@@ -1,6 +1,10 @@
-<h1>New Product</h1>
+<div class="mainCont">
 
-<%= render 'form', product: @product %>
+    <h1>New Product</h1>
+    
+    <%= render 'form', product: @product %>
+    
+    <%= link_to 'Back', products_path %>
 
-<%= link_to 'Back', products_path %>
+</div>
 
