--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -77,3 +77,11 @@ body{
     margin:0;
     padding:0;
 }
+
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
+#notice{
+    color:green;
+}
