--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -9,24 +9,17 @@
   </head>
 
   <body>
-    <header class="headSec">
-      <h1>Studio Ghibli European Store</h1>
-      <ul>
-        <li><%=link_to "Home", home_path %></li>
-        <li><%=link_to "Products", product_path %></li>
-        <li><%=link_to "About", about_path %></li>
-        <li><%=link_to "Help", help_path %></li>
-        <li><%=link_to "Contact", contact_path %></li>
-        <li><%=link_to "Account", account_path %></li>
-        <li><%=link_to "Login", login_path %></li>
-        <li><%=link_to "Cart", cart_path %></li>
-      </ul>
-    </header>
+    <%= render "layouts/header" %>
+    
     <div class="container">
       <%= yield %>
     </div>
     <footer class="foot">
       <h1>Im the Footer</h1>
+      <% if session[:login] == 1 %>
+        <%= link_to 'New Product', new_product_path, :class =>"button", :role=>"button" %>
+      <% end %>
     </footer>
+    
   </body>
 </html>
