--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -1,40 +1,31 @@
-<p id="notice"><%= notice %></p>
+<div class="mainCont">
+  <p id="notice"><%= notice %></p>
+  <div id="productsContainer">
+    <h1>Products</h1>
+    
+        <% @products.each do |product| %>
+        <div class="producthols">
+            <h1><%= product.title %></h1>
+            
+            <%= link_to (image_tag product.image_url, :class => "productholsIm"), product %>
+            <p><%= product.description %></p>
+            <p>Price <%= number_to_currency(product.cost_price, :unit => "€") %>
+           <br />
+            Colour: <%= product.colour %>
+           <br />
+           CategoryID: <%= product.catalog_categories_id %>
+          <br />
+           SupplierID: <%= product.supplier_id %></p>
+            <%= link_to 'Show', product, :class => "button", :role => "button" %>
+            <%= link_to 'Edit', edit_product_path(product), :class => "button", :role => "button"  %>
+            <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "button", :role => "button" %>
+        </div><!--End of producthols-->
+        <% end %>
+     
+  </div><!-- End of productContainer -->
 
-<h1>Products</h1>
+ <br />
+  <%= link_to 'New product', new_product_path %>
+  <br />
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Colour</th>
-      <th>Price</th>
-      <th>Image url</th>
-      <th>CategoryID</th>
-      <th>SupplierID</th>
-
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.colour %></td>
-        <td><%= product.cost_price %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.catalog_categories_id %></td>
-        <td><%= product.supplier_id %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New product', new_product_path %>
+</div>
