--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -17,6 +17,38 @@ body{
     margin:0;
     padding:0;
 }
+form{
+    width:33%;
+    margin-left:33%;
+}
+textarea {
+    resize: none;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+
 
 .headSec {
     background: url("/assets/Site/Studio-Ghibli-Header.jpg");
@@ -85,3 +117,5 @@ ul {
 #notice{
     color:green;
 }
+
+
