--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -14,12 +14,7 @@
     <div class="container">
       <%= yield %>
     </div>
-    <footer class="foot">
-      <h1>Im the Footer</h1>
-      <% if session[:login] == 1 %>
-        <%= link_to 'New Product', new_product_path, :class =>"button", :role=>"button" %>
-      <% end %>
-    </footer>
+    <%= render "layouts/footer" %>
     
   </body>
 </html>
