Adding comments to figure out what each file does and where the problem lies with the edi/destroy options and the routes

--- a/studio_ghibli_store/app/views/products/edit.html.erb
+++ b/studio_ghibli_store/app/views/products/edit.html.erb
@@ -1,8 +1,13 @@
+
+
 <div class="mainCont"> 
 
     <h1>Editing Product</h1>
     
-    <%= render 'form', product: @product %>
+    <%= 
+    # This is the webpage rendered after clicking on the Edit button.
+    
+    render 'form', product: @product %>
     
     <%= link_to 'Show', @product %> |
     <%= link_to 'Back', products_path %>
