--- a/studio_ghibli_store/app/views/products/new.html.erb
+++ b/studio_ghibli_store/app/views/products/new.html.erb
@@ -2,7 +2,10 @@
 
     <h1>New Product</h1>
     
-    <%= render 'form', product: @product %>
+    <%= 
+    # This main page where the form is rendered and we can create the new products
+    
+    render 'form', product: @product %>
     
     <%= link_to 'Back', products_path %>
 
