--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -3,13 +3,16 @@
   <p id="notice"><%= notice %></p>
   <div id="productsContainer">
     <h1><%= @product.title %></h1>
-    <%= image_tag @product.image_url, :class => 'welcomIm' %>
+    <%= 
+      # I am not sure what page this document refers to...Need to amend it to see...
+    
+    image_tag @product.image_url, :class => 'welcomIm' %>
     <h2><%= @product.description %></h1>
     
     <div class="producthols">
       <p>Price <%= number_to_currency(@product.cost_price, :unit => "€") %>
       <br />
-      Colour: <%= product.colour %>
+      Colour:
       <br>
       CategoryID: <%= product.catalog_categories_id %>
       <br>
