Added comments to the product views - to establish which document could be causing routes issue for delete and edit methods

--- a/studio_ghibli_store/app/views/products/_form.html.erb
+++ b/studio_ghibli_store/app/views/products/_form.html.erb
@@ -1,7 +1,7 @@
 
 
 <%= 
-# This is a partial rendered after the main page - used when you click on Edit / New.
+# This is a partial rendered after the main page - used when you click on Edit / New
 # This loop below is for iterating through the errors - that stop the product from being saved.
 form_for(product) do |form| %>
     <% if product.errors.any? %>
