--- a/studio_ghibli_store/app/views/products/edit.html.erb
+++ b/studio_ghibli_store/app/views/products/edit.html.erb
@@ -5,7 +5,7 @@
     <h1>Editing Product</h1>
     
     <%= 
-    # This is the webpage rendered after clicking on the Edit button.
+    # This is the webpage rendered after clicking on the Edit button
     
     render 'form', product: @product %>
     
