--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
     
         <% # This is a loop going through all the products on the Products table. 
            # This is the main page of the Products
-           # Below we output the values from each column for each record. 
+           # Below we output the values from each column for each record 
           
         
         @products.each do |product| %>
