--- a/studio_ghibli_store/app/views/products/new.html.erb
+++ b/studio_ghibli_store/app/views/products/new.html.erb
@@ -3,7 +3,7 @@
     <h1>New Product</h1>
     
     <%= 
-    # This main page where the form is rendered and we can create the new products
+    # This main page where the form is rendered and we can create the new products.
     
     render 'form', product: @product %>
     
