--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -30,7 +30,7 @@
   </div><!-- End of productContainer -->
 
      <br />
-  <%= link_to 'New product', new_product_path %>
+  <%= link_to 'New product', new_product_path, :class => "button", :role => "button" %>
   <br />
 
 
