--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -14,11 +14,11 @@
     <div class="producthols">
       <p>Price <%= number_to_currency(@product.cost_price, :unit => "€") %>
       <br />
-      Colour: <%= product.colour %>
+      Colour: <%= @product.colour %>
       <br>
-      CategoryID: <%= product.catalog_categories_id %>
+      CategoryID: <%= @product.catalog_categories_id %>
       <br>
-      SupplierID: <%= product.supplier_id %></p>
+      SupplierID: <%= @product.supplier_id %></p>
       
       <p>
       <%= link_to 'Edit', edit_product_path(@product), :class => "button", :role => "button" %>
