--- a/studio_ghibli_store/app/assets/stylesheets/products.scss
+++ b/studio_ghibli_store/app/assets/stylesheets/products.scss
@@ -1,7 +1,6 @@
-// Place all the styles related to the Products controller here.
+// Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 
 #productsContainer {
      width: 100%;
