--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -2,13 +2,18 @@
       <h1>Studio Ghibli European Store</h1>
       <ul>
         <li><%=link_to "Home", home_path %></li>
-        <li><%=link_to "Products", product_path %></li>
+        <li><%=link_to "Products", "/products" %></li>
         <li><%=link_to "About", about_path %></li>
         <li><%=link_to "Help", help_path %></li>
         <li><%=link_to "Contact", contact_path %></li>
         <li><%=link_to "Account", account_path %></li>
         <li><%=link_to "Cart", cart_path %></li>
-        <li><%=link_to "Log In", login_path %></li>
-        <li><%=link_to "Log Out", logout_path %></li>
+        <% if session[:login] == 1 %>    
+          <li><%= link_to "Log Out",   logout_path %></li>
+        <% else %>
+          <li><%= link_to "Log In",   login_path %></li>
+        <% end %>
+        
+        
       </ul>
 </header>
