--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title><%= yield(:title) %> | Studio Ghibli Store</title>
-    <%= csrf_meta_tags %>
+      <%= csrf_meta_tags %>
+      <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -14,6 +15,7 @@
     <div class="container">
       <%= yield %>
     </div>
+    
     <%= render "layouts/footer" %>
     
   </body>
