--- a/studio_ghibli_store/app/views/products/_form.html.erb
+++ b/studio_ghibli_store/app/views/products/_form.html.erb
@@ -3,7 +3,7 @@
 <%= 
 # This is a partial rendered after the main page - used when you click on Edit / New
 # This loop below is for iterating through the errors - that stop the product from being saved.
-form_for(product) do |form| %>
+ form_with(model: product, local: true) do |form| %>
     <% if product.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -55,4 +55,5 @@ form_for(product) do |form| %>
       <%= form.submit %>
     </div>
   <% end %>
+
 
