Cart setup, tidy up for mainContainer now inside the application layout, and login

--- a/studio_ghibli_store/app/views/products/new.html.erb
+++ b/studio_ghibli_store/app/views/products/new.html.erb
@@ -1,13 +1,9 @@
-<div class="mainCont">
+<h1>New Product</h1>
 
-    <h1>New Product</h1>
-    
-    <%= 
-    # This main page where the form is rendered and we can create the new products.
-    
-    render 'form', product: @product %>
-    
-    <%= link_to 'Back', products_path %>
+<%= render 'form', product: @product %>
 
-</div>
+<%= link_to 'Back', products_path, :class =>"button", :role=>"button" %>
+
+
+
 
