--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <%= render "layouts/header" %>
     
     <div class="container">
-      <%= yield %>
+      <div class="mainCont">
+        <%= yield %>
+      </div>
     </div>
     
     <%= render "layouts/footer" %>
