--- a/studio_ghibli_store/app/views/products/edit.html.erb
+++ b/studio_ghibli_store/app/views/products/edit.html.erb
@@ -1,15 +1,6 @@
+<h1>Editing Product</h1>
+    
+<%= render 'form', product: @product %>
 
-
-<div class="mainCont"> 
-
-    <h1>Editing Product</h1>
-    
-    <%= 
-    # This is the webpage rendered after clicking on the Edit button
-    
-    render 'form', product: @product %>
-    
-    <%= link_to 'Show', @product %> |
-    <%= link_to 'Back', products_path %>
-    
-</div>
+<%= link_to 'Show', @product %> |
+<%= link_to 'Back', products_path %>
