--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -1,5 +1,4 @@
-<div class="mainCont">
-  <p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %></p>
   <div id="productsContainer">
     <h1>Products</h1>
     
@@ -32,6 +31,7 @@
             </p>
         </div><!--End of producthols-->
         <% end %>
-     
   </div><!-- End of productContainer -->
-</div>
+
+<br>
+<%= link_to 'New Product',  new_product_path, :class => "button", :role => "button" %>
