Had the cart worker earlier but now having issues. Removed ability to edit product while not logged in

--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -20,7 +20,9 @@
       SupplierID: <%= @product.supplier_id %></p>
       
       <p>
-      <%= link_to 'Edit', edit_product_path(@product), :class => "button", :role => "button" %>
+      <% if session[:login] == 1 %>    
+        <%= link_to 'Edit', edit_product_path(@product), :class => "button", :role => "button" %>
+      <% end %>
       <%= link_to 'Back', products_path, :class => "button", :role => "button" %>
     
       
