--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -26,7 +26,6 @@
                 <% if session[:login] == 1 %> 
                     <%= link_to 'Edit',  edit_product_path(product), :class => "button", :role => "button" %>
                     <%= link_to 'Destroy',  product, method: :delete, data: { confirm: 'Are you sure?' }, :class => "button", :role => "button" %>
-                    <%= link_to 'New Product', new_product_path, :class =>"button", :role=>"button" %>
                 <% end %>
             </p>
         </div><!--End of producthols-->
@@ -34,4 +33,7 @@
   </div><!-- End of productContainer -->
 
 <br>
-<%= link_to 'New Product',  new_product_path, :class => "button", :role => "button" %>
+
+<% if session[:login] == 1 %> 
+    <%= link_to 'New Product',  new_product_path, :class => "button", :role => "button" %>
+<% end %>
