Amended the styles for the Sign-Up form and need to check out why other form values are not passing through to the db table

--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@ textarea {
     resize: none;
 }
 
-input[type=text], select, textarea {
+input[type=text], select, textarea, input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
