--- a/studio_ghibli_store/app/views/devise/registrations/new.html.erb
+++ b/studio_ghibli_store/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, :type =>"text", autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -13,7 +13,12 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", :required => 'required' %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :required => 'required' %>
   </div>
   
   <div class="field">
@@ -31,12 +36,6 @@
     <%= f.text_field :mobile_number, :type =>"text", :required => 'required' %>
   </div>
   
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
