--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -25,17 +25,18 @@ textarea {
     resize: none;
 }
 
-input[type=text], select, textarea, input[type=password] {
-    width: 100%;
+input[type=text], select, textarea, input[type=password], input[type=email] {
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    text-align: center;
 }
 input[type=submit] {
-    width: 100%;
+    width: 50%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
