--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -6,22 +6,22 @@
         <li><%=link_to "About", about_path %></li>
         <li><%=link_to "Help", help_path %></li>
         <li><%=link_to "Contact", contact_path %></li>
-        <li><%=link_to "Account", account_path %></li>
         <li><%=link_to "Cart", cart_path %></li>
         
         <% if user_signed_in? %>
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-          <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+          <li><%= link_to 'View Orders', orders_path %></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
         <% else %>
           <li><%= link_to 'Register', new_user_registration_path %></li>
-          <li><%= link_to 'Sign in', new_user_session_path %></li>
+          <li><%= link_to 'Login', new_user_session_path %></li>
         <% end %>
         
         
         <% if session[:login] == 1 %>    
-          <li><%= link_to "Log Out",   logout_path %></li>
+          <li><%= link_to "Admin Logout",   logout_path %></li>
         <% else %>
-          <li><%= link_to "Log In",   login_path %></li>
+          <li><%= link_to "Admin Login",   login_path %></li>
         <% end %>
 
         
