--- a/studio_ghibli_store/app/views/orderitems/index.html.erb
+++ b/studio_ghibli_store/app/views/orderitems/index.html.erb
@@ -1,2 +1,19 @@
-<h1>OrderItems#index</h1>
-<p>Find me in app/views/order_items/index.html.erb</p>
+<h1>Orderitems#index</h1>
+
+<h2>Order Items</h2>
+
+ <table id="customers">
+   <% @orderitems.each do |orderitem| %>
+      <tr>
+        <td><%= orderitem.created_at %></td>
+        
+        <td><%= orderitem.title %></td>
+       <td><%= orderitem.order_id %></td>
+       
+      </tr>
+    <% end %>
+ 
+   <tr></tr>
+   </table>
+      
+   </div>
