--- a/studio_ghibli_store/app/views/cart/createOrder.html.erb
+++ b/studio_ghibli_store/app/views/cart/createOrder.html.erb
@@ -9,7 +9,7 @@
 <table id="customers">
     <tr>
     <% @orders.limit(1).order(id: :desc).each do |order| %>
-        <td>Order reference for the order you just placed: <%= order.id %></td>
+        <td>Your Order No. is: <%= order.id %></td>
         <% @orderNum = order.id %>
     <% end %>
     </tr>
