Renamed catalog_categories_id to categories_id under two views

--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
            <br />
             Colour: <%= product.colour %>
            <br />
-           CategoryID: <%= product.catalog_categories_id %>
+           CategoryID: <%= product.categories_id %>
           <br />
            SupplierID: <%= product.supplier_id %></p>
            <p>
