--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
       <br />
       Colour: <%= @product.colour %>
       <br>
-      CategoryID: <%= @product.catalog_categories_id %>
+      CategoryID: <%= @product.categories_id %>
       <br>
       SupplierID: <%= @product.supplier_id %></p>
       
