--- a/studio_ghibli_store/app/views/layouts/_footer.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_footer.html.erb
@@ -1,3 +1,7 @@
 <footer class="foot">
     <h1>Im the Footer</h1>
+    <% if session[:login] == 1 %> 
+        <%= link_to 'New Product',  new_product_path, :class => "button", :role => "button" %>
+        <%= link_to 'New Category', new_category_path, :class =>"button", :role=>"button" %>
+    <% end %>
 </footer>
