Categories almost complete but issue with category not in the products table

--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -50,6 +50,10 @@ input[type=submit]:hover {
 }
 
 
+a.button:visited {
+    color: #FFF;
+}
+
 
 .headSec {
     background: url("/assets/Site/Studio-Ghibli-Header.jpg");
