--- a/studio_ghibli_store/app/views/static_pages/home.html.erb
+++ b/studio_ghibli_store/app/views/static_pages/home.html.erb
@@ -10,4 +10,5 @@
     <br />
     <br />
     <p>This will be the home page of the web app we will create together</p>
+    <%=render 'layouts/categories'%>
 </div>
