--- a/studio_ghibli_store/app/views/layouts/_categories.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_categories.html.erb
@@ -2,9 +2,8 @@
 <br>
 
  <% @categories.each do |category| %>
-       <div class="itemhols">
-           <p><%= category.title %></p>
-           <%= link_to (image_tag category.image, :class=>"itemholsIm"), category %>
+       <div class="producthols">
+           <%= link_to (image_tag category.image, :class=>"productholsIm"), category %>
            <p><%= category.description %></p>
             
            <p><a href="/category/<%= category.title %>" class="button"><%= category.title %></a></p>
