The categories are now setup and the products are filtered by them successfully

--- a/studio_ghibli_store/app/views/products/_form.html.erb
+++ b/studio_ghibli_store/app/views/products/_form.html.erb
@@ -40,8 +40,8 @@
     </div>
     
     <div class="field">
-      <%= form.label :catalog_categories_id %>
-      <%= form.text_field :catalog_categories_id, id: :product_catalog_categories_id, :type =>"text", :required => 'required' %>
+      <%= form.label :category %>
+      <%= form.text_field :category, id: :product_category, :type =>"text", :required => 'required' %>
     </div>
     
     <div class="field">
