--- a/studio_ghibli_store/app/views/static_pages/category.html.erb
+++ b/studio_ghibli_store/app/views/static_pages/category.html.erb
@@ -14,11 +14,9 @@
             <%= product.description %>
         </p>
         <p>
-            <%= product.price %>
+            <%= product.cost_price %>
             <br />
             <%= product.category %>
-            <br />
-            <%= product.brand %>
         </p>
         <p>
             <a href="/cart/<%= product.id %>" class="button">Add to Cart</a>
