--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -15,10 +15,11 @@
       <br />
       Colour: <%= @product.colour %>
       <br>
-      CategoryID: <%= @product.categories_id %>
+      Category: <%= @product.category %>
       <br>
-      SupplierID: <%= @product.supplier_id %></p>
-      
+      <% if session[:login] == 1 %> 
+        SupplierID: <%= @product.supplier_id %></p>
+      <% end %>
       <p>
       <% if session[:login] == 1 %>    
         <%= link_to 'Edit', edit_product_path(@product), :class => "button", :role => "button" %>
