Search functionality working and some minor design changes due to screen sizes

--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -53,7 +53,9 @@ input[type=submit]:hover {
 a.button:visited {
     color: #FFF;
 }
-
+#searchFrm{
+    margin-left:33%;
+}
 
 .headSec {
     background: url("/assets/Site/Studio-Ghibli-Header.jpg");
