--- a/studio_ghibli_store/app/views/layouts/application.html.erb
+++ b/studio_ghibli_store/app/views/layouts/application.html.erb
@@ -14,9 +14,15 @@
   <body>
     <%= render "layouts/header" %>
     
+    
     <div class="container">
       <div class="mainCont">
         <%= yield %>
+      </div>
+      <div id="first-column">
+          <div class="searchbox">
+            <%=render 'layouts/search'%>
+          </div>
       </div>
     </div>
     
@@ -24,3 +30,11 @@
     
   </body>
 </html>
+
+
+
+      
+
+      
+
+
