--- a/studio_ghibli_store/app/views/layouts/_search.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/search", :method => "post") do %>
+<%= form_tag("/search", :method => "post", :id => "searchFrm",) do %>
 <%= label_tag(:q, "Search for:") %>
 <%= text_field_tag(:q) %>
 <%= submit_tag("Search") %>
