--- a/studio_ghibli_store/app/views/products/search.html.erb
+++ b/studio_ghibli_store/app/views/products/search.html.erb
@@ -20,12 +20,14 @@
             <%= product.description %>
           </div>  
           <div class="price">
-             <%= number_to_currency(product.price, :unit => "€") %>
+             <%= number_to_currency(product.cost_price, :unit => "€") %>
           </div>
           <div class="links">
             <% if user_signed_in? %>
-              <%= link_to 'Edit', edit_product_path(product) %>
-              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% if session[:login] == 1 %> 
+                <%= link_to 'Edit', edit_product_path(product) %>
+                <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
             <%else%>
             
               <a href="/cart/<%= product.id %>">Add to Cart</a>
