Search form now only under Products and added the thank you page after the payment was taken

--- a/studio_ghibli_store/app/views/products/index.html.erb
+++ b/studio_ghibli_store/app/views/products/index.html.erb
@@ -35,3 +35,9 @@
   </div><!-- End of productContainer -->
 
 <br>
+
+<div id="first-column">
+          <div class="searchbox">
+            <%=render 'layouts/search'%>
+          </div>
+      </div>
