Working on bringing in the subtotal on the navbar

--- a/studio_ghibli_store/app/views/cart/createOrder.html.erb
+++ b/studio_ghibli_store/app/views/cart/createOrder.html.erb
@@ -4,8 +4,6 @@
 </div>
 
 
-
-
 <table id="customers">
     <tr>
     <% @orders.limit(1).order(id: :desc).each do |order| %>
@@ -44,7 +42,7 @@
   
 <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick">
-    <input type="hidden" name="business" value="craigdanielbell@gmail.com">
+    <input type="hidden" name="business" value="craigdanielbell-facilitator@gmail.com"> <!-- Tester email = craigdanielbell-buyer@gmail.com and password =280dcf8047cf2 -->
     <input type="hidden" name="product_name" value="Studio Ghibli Order Number <%= @orderNum %>">
     <input type="hidden" name="currency_code" value="EUR">
     <input type="hidden" name="amount" value="<%= @overall %>">
