--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
           <li><%= link_to 'View Orders', orders_path %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+ 
         <% else %>
           <li><%= link_to 'Register', new_user_registration_path %></li>
           <li><%= link_to 'Login', new_user_session_path %></li>
@@ -19,9 +20,14 @@
         
         
         <% if session[:login] == 1 %>    
+          <%= render "cart/subtotal" %>
           <li><%= link_to "Admin Logout",   logout_path %></li>
-        <% else %>
+          <li><%= link_to "Subtotal: ", cart_path %> <%= number_to_currency(@grand_total, :unit =>"€") %></li>
+
+        <% else
+        <%= render "cart/subtotal" %>
           <li><%= link_to "Admin Login",   login_path %></li>
+          <li><%=link_to "Subtotal: ", cart_path %> <%= number_to_currency(@grand_total, :unit =>"€") %></li>
         <% end %>
 
         
