Value appears beside the subtotal but the colour of the text is the same as the navbar. Home and cart views only

--- a/studio_ghibli_store/app/assets/stylesheets/application.css
+++ b/studio_ghibli_store/app/assets/stylesheets/application.css
@@ -92,6 +92,15 @@ a.button:visited {
      padding: 14px 16px;
      text-decoration: none;
 }
+#sub li {
+     color: #ffffff;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+}
+
+
+
 .mainCont {
      margin: auto;
      width:80%;
