--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
           <li><%= link_to 'View Orders', orders_path %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
- 
+          <li><%= link_to "Subtotal: ", "#" %><%= number_to_currency(@grand_total, :unit =>"€") %></li>
         <% else %>
           <li><%= link_to 'Register', new_user_registration_path %></li>
           <li><%= link_to 'Login', new_user_session_path %></li>
@@ -20,14 +20,10 @@
         
         
         <% if session[:login] == 1 %>    
-          <%= render "cart/subtotal" %>
+          <br />
           <li><%= link_to "Admin Logout",   logout_path %></li>
-          <li><%= link_to "Subtotal: ", cart_path %> <%= number_to_currency(@grand_total, :unit =>"€") %></li>
-
-        <% else
-        <%= render "cart/subtotal" %>
+        <% else %>
           <li><%= link_to "Admin Login",   login_path %></li>
-          <li><%=link_to "Subtotal: ", cart_path %> <%= number_to_currency(@grand_total, :unit =>"€") %></li>
         <% end %>
 
         
