Subtotal added to the navbar across most pages

--- a/studio_ghibli_store/app/views/cart/index.html.erb
+++ b/studio_ghibli_store/app/views/cart/index.html.erb
@@ -60,11 +60,7 @@
          
         <% end %>
         
-        <tr>
-        
-            SubTotal: <%= number_to_currency(@grand_total, :unit =>"€") %>
-           
-        </tr>
+        <tr>SubTotal: <%= number_to_currency(@grand_total, :unit =>"€") %></tr>
     </table>
         <a href="/products" class="button">Continue Shopping</a>
     <% if !@cart.empty? %>
