--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -12,8 +12,10 @@
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
           <li><%= link_to 'View Orders', orders_path %></li>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-          <%= path="(#{@count_items} items) #{number_to_currency(@grand_total, :unit =>"Subtotal: €")}" %>
-          <li><%= link_to path, "#"  %></li>
+          <% if @cart && !@cart.empty? %>
+            <%= path="(#{@count_items} items) #{number_to_currency(@grand_total, :unit =>"Subtotal: €")}" %>
+            <li><%= link_to path, "#"  %></li>
+          <% end %>
         <% else %>
           <li><%= link_to 'Register', new_user_registration_path %></li>
           <li><%= link_to 'Login', new_user_session_path %></li>
