--- a/studio_ghibli_store/app/views/products/show.html.erb
+++ b/studio_ghibli_store/app/views/products/show.html.erb
@@ -17,11 +17,11 @@
       <br>
       Category: <%= @product.category %>
       <br>
-      <% if session[:login] == 1 %> 
+      <% if current_user.admin? %>
         SupplierID: <%= @product.supplier_id %></p>
       <% end %>
       <p>
-      <% if session[:login] == 1 %>    
+      <% if current_user.admin? %>
         <%= link_to 'Edit', edit_product_path(@product), :class => "button", :role => "button" %>
       <% end %>
       <%= link_to 'Back', products_path, :class => "button", :role => "button" %>
