--- a/studio_ghibli_store/app/views/layouts/_categories.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_categories.html.erb
@@ -6,7 +6,7 @@
            <%= link_to (image_tag category.image, :class=>"productholsIm"), category %>
            <p><%= category.description %></p>
             
-           <p><a href="/category/<%= category.title %>" class="button"><%= category.title %></a></p>
+           <p><a href="/category/<%= category.id %>" class="button"><%= category.title %></a></p>
            
          </div>
     
