--- a/studio_ghibli_store/app/views/layouts/_header.html.erb
+++ b/studio_ghibli_store/app/views/layouts/_header.html.erb
@@ -10,7 +10,9 @@
         
         <% if user_signed_in? %>
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-          <li><%= link_to 'View Orders', orders_path %></li>
+          <% if current_user && current_user.admin? %>
+            <li><%= link_to 'View Orders', orders_path %></li>
+          <% end %>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
           <% if @cart && !@cart.empty? %>
             <%= path="(#{@count_items} items) #{number_to_currency(@grand_total, :unit =>"Subtotal: €")}" %>
