--- a/studio_ghibli_store/app/views/orders/index.html.erb
+++ b/studio_ghibli_store/app/views/orders/index.html.erb
@@ -1,51 +1,53 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Orders</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Order date</th>
-      <th>User</th>
-      <th>Status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @orders.each do |order| %>
+<% if current_user.admin? %>
+  <p id="notice"><%= notice %></p>
+  
+  <h1>Orders</h1>
+  
+  <table>
+    <thead>
       <tr>
-        <td><%= order.order_date %></td>
-        <td><%= order.user_id %></td>
-        <td><%= order.status %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Order date</th>
+        <th>User</th>
+        <th>Status</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @orders.each do |order| %>
+        <tr>
+          <td><%= order.order_date %></td>
+          <td><%= order.user_id %></td>
+          <td><%= order.status %></td>
+            <td><%= link_to 'Show', order %></td>
+            <td><%= link_to 'Edit', edit_order_path(order) %></td>
+            <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+  <br>
+  
+  
+  <h2>Order Items</h2>
+  
+   <table id="customers">
+     <% @orderitems.each do |orderitem| %>
+        <tr>
+          <td><%= orderitem.created_at %></td>
+          
+          <td><%= orderitem.title %></td>
+         <td><%= orderitem.order_id %></td>
+         
+        </tr>
+      <% end %>
+   
+     <tr></tr>
+     </table>
+  
+  
+  <%= link_to 'New Order', new_order_path %>
+<% end %>
 
-<br>
-
-
-<h2>Order Items</h2>
-
- <table id="customers">
-   <% @orderitems.each do |orderitem| %>
-      <tr>
-        <td><%= orderitem.created_at %></td>
-        
-        <td><%= orderitem.title %></td>
-       <td><%= orderitem.order_id %></td>
-       
-      </tr>
-    <% end %>
- 
-   <tr></tr>
-   </table>
-      
-   </div>
-
-
-<%= link_to 'New Order', new_order_path %>
+<h2>You are not authorized to view this resource.</h2>
