--- a/studio_ghibli_store/app/views/orders/index.html.erb
+++ b/studio_ghibli_store/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.admin? %>
+
   <p id="notice"><%= notice %></p>
   
   <h1>Orders</h1>
@@ -20,8 +20,6 @@
           <td><%= order.user_id %></td>
           <td><%= order.status %></td>
             <td><%= link_to 'Show', order %></td>
-            <td><%= link_to 'Edit', edit_order_path(order) %></td>
-            <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
@@ -32,22 +30,18 @@
   
   <h2>Order Items</h2>
   
-   <table id="customers">
-     <% @orderitems.each do |orderitem| %>
-        <tr>
-          <td><%= orderitem.created_at %></td>
-          
-          <td><%= orderitem.title %></td>
-         <td><%= orderitem.order_id %></td>
-         
-        </tr>
-      <% end %>
-   
-     <tr></tr>
-     </table>
-  
-  
-  <%= link_to 'New Order', new_order_path %>
+  <table id="customers">
+   <% @orderitems.each do |orderitem| %>
+      <tr>
+        <td><%= orderitem.created_at %></td>
+        <td><%= orderitem.title %></td>
+        <td><%= orderitem.order_id %></td>
+      </tr>
+    <% end %>
+   <tr></tr>
+  </table>
+     
+<% if current_user.admin? %> 
+  <%= link_to 'New Order', new_order_path, :class =>"button", :role=>"button" %>
 <% end %>
 
-<h2>You are not authorized to view this resource.</h2>
