User now redirected to Welcome page

--- a/studio_ghibli_store/app/views/devise/registrations/edit.html.erb
+++ b/studio_ghibli_store/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>My Account</h2>
 
-<p>Need to include purchase history here</p>
+<p>-Need to include purchase history here-</p>
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
